awm-api/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awm-api
spec:
  selector:
    matchLabels:
      app: awm-api
  template:
    metadata:
      labels:
        app: awm-api
    spec:
      containers:
        - name: awm-api
          image: hughdo/awm-api:GITHUB_SHA
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: awm-api-svc
spec:
  selector:
    app: awm-api
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: awm-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - awm.hughdo.dev
      secretName: awm-api-tls
  rules:
    - host: awm.hughdo.dev
      http:
        paths:
          - path: /api(/|$)(.*)
            backend:
              serviceName: awm-api-svc
              servicePort: 4000
